fix: allow inline code blocks to wrap

--- a/src/_layouts/blog-post.scss
+++ b/src/_layouts/blog-post.scss
@@ -151,6 +151,10 @@ article {
     }
   }
 
+  p > code {
+    white-space: normal;
+  }
+
   // embed default styling
   blockquote.twitter-tweet,
   p.codepen {
